new codes added

--- a/css layout/page1.css
+++ b/css layout/page1.css
@@ -1,16 +1,16 @@
-body{ background-color: rgb(33, 77, 53);
+body{ background-color: rgb(12,59,46);
     color: aliceblue;
 }
 
 h1{
     color: rgb(255, 255, 255); 
     font-family: "YAEnXArs1iQ 0", _fb_, auto;
-     line-height: 77px;
-     font-size: 80px;
+     line-height: 30px;
+     font-size: 30px;
 }
 
 h3{
-    background-color: rgb(231, 179, 35);
+    background-color: rgb(255,186,0);
     border-radius: 5cm;
     min-inline-size: 1%;
     text-align: center;
@@ -21,24 +21,19 @@ h3{
 
 .parent{
     width: 100%;
-    margin-left: 2%;
- 
+ }
+
+
+.text{
+    width: 50%;
+
+
 
 }
 
 
-.one{
-    width: 60%;
-    float: left;
-    margin-top: 10%;
 
-
-}
-
-
- .two{
+img1{
     width: 40%;
-    float:right;
-
-
+    float: right;
  }
