--- a/css layout/page 3.css
+++ b/css layout/page 3.css
@@ -1,3 +1,32 @@
-body{
-    background-color: rgb(255,186,0);
-}
+.third {
+    background-color: rgb(255, 186, 0);
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 50px;
+    box-sizing: border-box;
+    text-align: center;
+    color: black;
+  }
+  
+  .third h3 {
+    margin-bottom: 20px;
+    color: black;
+  }
+
+  .third p{
+    color: black;
+  }
+  
+  .third h1{
+    color: black;
+  }
+
+  .flex {
+    width: 100%;
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; 
+    color: black;
+  }
+  
